WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212840
[JSC] Put dfgOpNames in __DATA,__const section instead of __DATA,__data
https://bugs.webkit.org/show_bug.cgi?id=212840
Summary
[JSC] Put dfgOpNames in __DATA,__const section instead of __DATA,__data
Yusuke Suzuki
Reported
2020-06-05 12:09:05 PDT
[JSC] Put dfgOpNames in __DATA,__const section instead of __DATA,__data
Attachments
Patch
(3.66 KB, patch)
2020-06-05 12:11 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
Patch for landing
(4.83 KB, patch)
2020-06-05 12:48 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.98 KB, patch)
2020-06-05 14:23 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.01 KB, patch)
2020-06-05 14:27 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-06-05 12:11:23 PDT
Created
attachment 401180
[details]
Patch
Mark Lam
Comment 2
2020-06-05 12:15:25 PDT
Comment on
attachment 401180
[details]
Patch Nice. r=me too.
Yusuke Suzuki
Comment 3
2020-06-05 12:18:44 PDT
Oops, compile failures. Fixing.
Yusuke Suzuki
Comment 4
2020-06-05 12:48:22 PDT
Created
attachment 401187
[details]
Patch for landing
Yusuke Suzuki
Comment 5
2020-06-05 14:23:53 PDT
Created
attachment 401196
[details]
Patch for landing
Yusuke Suzuki
Comment 6
2020-06-05 14:27:25 PDT
Created
attachment 401199
[details]
Patch for landing
Yusuke Suzuki
Comment 7
2020-06-05 18:43:50 PDT
Since DFGDoesGCCheck is not enabled in Release build, jsc test run in EWS is unrelated. So, since I've ensured that this is built correctly with Release / Debug, I'll land it.
EWS
Comment 8
2020-06-05 18:59:09 PDT
Committed
r262667
: <
https://trac.webkit.org/changeset/262667
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401199
[details]
.
Radar WebKit Bug Importer
Comment 9
2020-06-05 19:00:17 PDT
<
rdar://problem/64054916
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug