[JSC] Put dfgOpNames in __DATA,__const section instead of __DATA,__data https://bugs.webkit.org/show_bug.cgi?id=212840

Reviewed by Saam Barati.

dfgOpNames array itself is not const annotated, and the compiler makes it __DATA,__data instead of __DATA,__const.
We should annotate it with const to ensure that this is compiled into __DATA,__const. We also remove unused CallFrame::describeFrame
since it allocates some bss memory, while we have more sophisticated mechanism (VMInspector) for this functionality and this function
is no longer used.

* dfg/DFGDoesGCCheck.cpp:
(JSC::DFG::DoesGCCheck::verifyCanGC):
* dfg/DFGGraph.cpp:
* dfg/DFGGraph.h:
* interpreter/CallFrame.cpp:
(JSC::CallFrame::describeFrame): Deleted.
* interpreter/CallFrame.h:


Canonical link: https://commits.webkit.org/225666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262667 268f45cc-cd09-0410-ab3c-d52691b4dbfc